[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_code_lib = {git = "https://github.com/gjf2a/advent_code_lib"}
point_set = {git = "https://github.com/gjf2a/point_set"}
anyhow = "1"
map-macro = "0.2.6"
indexmap = "2.1.0"
hash_histogram = "0.8.0"
enum-iterator = "1"
bare_metal_modulo = "1"
gapbuf = "0.1.4"
num-integer = "0.1.45"
im = "15.1.0"
num-rational = "0.4.1"
nalgebra = "0.32.3"